# napari-image-stacker

./: LICENSE  README.md  setup.cfg  setup.py  tox.ini
docs/: conf.py  index.rst
src/napari_image_stacker/: __init__.py  _dock_widget.py  _dock_widget.py.save
src/napari_image_stacker/_tests/: test_dock_widget.py  test_function.py
