[metadata]
name = napari-image-stacker

author = Robin Koch, Marc Boucsein
author_email = robin.koch@dkfz-heidelberg.de
url = https://github.com/RobAnKo/napari-image-stacker
license = MIT
description = A plugin designed to convert multiple open layers into a stack or vice versa
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
project_urls =
    Bug Tracker = https://github.com/RobAnKo/napari-image-stacker/issues
    Documentation = https://github.com/RobAnKo/napari-image-stacker#README.md
    Source Code = https://github.com/RobAnKo/napari-image-stacker
    User Support = https://github.com/RobAnKo/napari-image-stacker/issues

[options]
packages = find:
python_requires = >=3.7
package_dir =
    =src
setup_requires = setuptools_scm
# add your package requirements here
install_requires =
    napari-plugin-engine>=0.1.4
    numpy

[options.packages.find]
where = src

[options.entry_points] 
napari.plugin = 
    napari-image-stacker = napari_image_stacker
